--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,135 @@
 @import url(http://fonts.googleapis.com/css?family=Merriweather:400,700,400italic|Open+Sans);
-
-/* Typography */
+/**
+ * Media query breakpoints
+ *
+ * Example usage:
+ *   @include mq(50em) {
+ *     color: red;
+ *   }
+ */
+/**
+ * Clearfix
+ *
+ * Example usage:
+ *   div {
+ *     @extend %clearfix;
+ *   }
+ */
+/**
+ * Hide from both screenreaders and browsers: h5bp.com/u
+ *
+ * Example usage:
+ *   div {
+ *     @extend $hidden;
+ *   }
+ */
+/**
+ * Hide only visually, but have it available for screenreaders: h5bp.com/v
+ *
+ * Example usage:
+ *   div {
+ *     @extend %visuallyhidden;
+ *   }
+ */
+/**
+ * Extends the .visuallyhidden class to allow the element to be focusable
+ * when navigated to via the keyboard: h5bp.com/p
+ *
+ * Example usage:
+ *   div {
+ *     @extend %visuallyhidden--focusable;
+ *   }
+ */
+/**
+ * Hide visually and from screenreaders, but maintain layout
+ *
+ * Example usage:
+ *   div {
+ *     @extend %invisible;
+ *   }
+ */
+/**
+ * SVG, PNG and PNG@2x background image
+ *
+ * Example usage:
+ *   div {
+ *     @include background-image('/images/logo');
+ *   }
+ *
+ * Generated CSS:
+ *   div {
+ *     background-image: url(/images/logo.svg);
+ *   }
+ *   .no-svg div {
+ *     background-image: url(/images/logo.png);
+ *   }
+ *   @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+ *     .no-svg div {
+ *       background-image: url(/images/logo@2x.png);
+ *     }
+ *   }
+ */
+/**
+ * Vertically center items withing a container
+ *
+ * Example usage:
+ *   div p {
+ *     @extend %vertical-align;
+ *   }
+ */
 * {
-    text-shadow: none !important;
+  box-sizing: border-box; }
+
+img {
+  max-width: 100%; }
+
+body,
+.ui-page-theme-a {
+  background: #e2ddcc !important;
+  color: #3a617a !important;
+  text-align: center; }
+
+hr {
+  border: none;
+  border-bottom: 1px solid #517891;
+  width: 70%;
+  max-width: 440px; }
+
+.ui-page-theme-a a,
+html .ui-bar-a a,
+html .ui-body-a a,
+html body .ui-group-theme-a a,
+.ui-page-theme-a a:visited,
+html .ui-bar-a a:visited,
+html .ui-body-a a:visited,
+html body .ui-group-theme-a a:visited {
+  color: #517891; }
+
+/* Page */
+.ui-header h3 {
+  margin: 0.7em 1em;
+  min-height: 1.1em; }
+
+/*
+.ui-page-header-fixed {
+    padding-top: 43px;
 }
+.ui-page-footer-fixed {
+    padding-bottom: 49px;
+}*/
+.ui-content {
+  padding: 0 1em 1em; }
+
+#content-wrapper h3.stop-title {
+  margin-top: 0;
+  width: 100%; }
+
+/* list view overrides */
+.ui-listview .ui-li-icon {
+  top: .7em; }
+
+* {
+  text-shadow: none !important; }
 
 body,
 input,
@@ -12,493 +138,383 @@ textarea,
 button,
 .ui-btn,
 .leaflet-popup-content-wrapper {
-    font-family: 'Merriweather', serif;
-    font-weight: 400;
-}
+  font-family: "Merriweather", "Georgia", serif;
+  font-weight: 400; }
 
 .keypad-button,
 .action-button,
 #code-label,
 .stop-code {
-    font-family: 'Open Sans', sans-serif;
-}
+  font-family: "Open Sans", sans-serif; }
 
 strong {
-    font-weight: 700;
-}
+  font-weight: 700; }
 
-.ui-page-theme-a, .ui-page-theme-a .ui-btn, html .ui-bar-a .ui-btn, html .ui-body-a .ui-btn, html body .ui-group-theme-a .ui-btn, html head + body .ui-btn.ui-btn-a,
-.ui-page-theme-a .ui-btn:visited, html .ui-bar-a .ui-btn:visited, html .ui-body-a .ui-btn:visited, html body .ui-group-theme-a .ui-btn:visited, html head + body .ui-btn.ui-btn-a:visited {
-    text-shadow: none;
-}
+/* Audio Slideshow Stop */
+.slideshow-images {
+  height: 300px;
+  overflow: hidden;
+  position: relative;
+  width: 100%; }
 
-/* Colors */
-.ui-page-theme-a a, html .ui-bar-a a, html .ui-body-a a, html body .ui-group-theme-a a,
-.ui-page-theme-a a:visited, html .ui-bar-a a:visited, html .ui-body-a a:visited, html body .ui-group-theme-a a:visited {
-    color: #517891;
-}
+.slideshow-images img {
+  -webkit-transition: opacity 1s ease-in-out;
+  -moz-transition: opacity 1s ease-in-out;
+  -o-transition: opacity 1s ease-in-out;
+  transition: opacity 1s ease-in-out;
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: alpha(opacity=0);
+  display: block;
+  left: 0;
+  max-height: 300px;
+  position: absolute; }
 
-.tour-stop-list .ui-listview .ui-btn {
-    background: #517891 !important;
-    font-weight: 400;
-    color: #fff !important;
-    border: none !important;
-    margin: 0 1em 1em !important;
-    padding: 1em 1em 1em 0;
-}
+.slideshow-images img.opaque {
+  opacity: 1;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+  filter: alpha(opacity=1); }
 
-.tour-stop-list .ui-listview .ui-btn:hover {
-    background: #5d89a6 !important;
-}
+/* Audio Stops */
+#audio-stop .poster-image {
+  width: 100%; }
 
-.ui-page-theme-a {
-    background: #e2ddcc !important;
-    color: #3a617a !important;
-    text-align: center;
-}
-
-/* Page */
-.ui-header h3 {
-    margin: .7em 1em;
-    min-height: 1.1em;
-}
-.ui-page-header-fixed {
-    padding-top: 43px;
-}
-.ui-page-footer-fixed {
-    padding-bottom: 49px;
-}
-#content-wrapper {
-
-}
-#content-wrapper h3.stop-title {
-    margin-top: 0;
-    width: 100%;
-}
 .ui-btn-back {
-    position: absolute;
-    left: 0;
-    top: 0;
-    font-weight: 400 !important;
-    font-size: .875em !important;
-    text-decoration: none;
-    text-transform: lowercase;
-    padding: 18px 2% 10px;
-}
+  position: absolute;
+  left: 0;
+  top: 0;
+  font-weight: 400 !important;
+  font-size: .875em !important;
+  text-decoration: none;
+  text-transform: lowercase;
+  padding: 18px 2% 10px; }
+
 .ui-btn-back i {
-    float: left;
-    font-size: 2em;
-    margin-top: -6px;
-    margin-right: 5px;
-}
+  float: left;
+  font-size: 2em;
+  margin-top: -6px;
+  margin-right: 5px; }
 
-/* popup */
-#popup-view p {
-    text-align: center;
-}
+/* Filter Form */
+.ui-filterable {
+  margin-bottom: 1em; }
 
-/* social popup */
-.share-button {
-    margin-bottom: 10px;
-}
+.ui-filterable .ui-input-search {
+  border-radius: 0;
+  border: 1px solid #7094aa;
+  box-shadow: none; }
+
+/* Footer */
+.ui-footer .ui-btn {
+  border: none !important;
+  color: #517891 !important;
+  text-transform: lowercase;
+  font-weight: 400;
+  padding-top: 38px; }
+
+.ui-footer .ui-btn-active {
+  background-color: #d3dde3 !important; }
+
+.ui-icon-keypadview:after,
+.ui-icon-stoplistview:after,
+.ui-icon-mapview:after {
+  background-color: transparent;
+  background-size: cover;
+  border-radius: 0;
+  width: 30px;
+  height: 30px; }
+
+.ui-icon-keypadview:after {
+  background-image: url(../images/icon_keypad.svg); }
+
+.ui-icon-stoplistview:after {
+  background-image: url(../images/icon_menu.svg); }
+
+.ui-icon-mapview:after {
+  background-image: url(../images/icon_map_pointer.svg); }
+
+.ui-btn-icon-notext:after,
+.ui-btn-icon-top:after,
+.ui-btn-icon-bottom:after {
+  margin-left: -15px; }
 
 /* Header */
 #header .ui-icon-social {
-    background-image: url(../images/share-white.png);
-    background-size: 16px 16px;
-}
+  background-image: url(../images/share-white.png);
+  background-size: 16px 16px; }
 
 .ui-bar-a,
 .ui-page-theme-a .ui-bar-inherit,
 html .ui-bar-a .ui-bar-inherit,
 html .ui-body-a .ui-bar-inherit,
 html body .ui-group-theme-a .ui-bar-inherit {
-    background: #fff !important;
-    border: none;
-    text-align: center;
-}
+  background: #fff !important;
+  border: none;
+  text-align: center; }
 
-/* Footer */
-#footer .ui-icon {
-}
-.ui-footer .ui-btn {
-    border: none !important;
-    color: #517891 !important;
-    text-transform: lowercase;
-    font-weight: 400;
-    padding-top: 38px;
-}
-.ui-footer .ui-btn-active {
-    background-color: #d3dde3 !important;
-}
+/* Image Stop */
+#gallery {
+  margin: 0;
+  padding: 0;
+  list-style: none; }
 
-.ui-icon-keypadview:after,
-.ui-icon-stoplistview:after,
-.ui-icon-mapview:after {
-    background-color: transparent;
-    background-size: cover;
-    border-radius: 0;
-    width: 30px;
-    height: 30px;
-}
+#gallery li {
+  float: left;
+  width: 33.33333333%; }
 
-.ui-icon-keypadview:after{
-    background-image: url(../images/keypad_icon.svg);
-}
-.ui-icon-stoplistview:after {
-    background-image: url(../images/menu_icon.svg);
-}
-.ui-icon-mapview:after {
-    background-image: url(../images/map_pointer.svg);
-}
+#gallery li a {
+  border: 1px solid #3c3c3c;
+  display: block;
+  margin: 5px; }
 
-.ui-btn-icon-notext:after,
-.ui-btn-icon-top:after,
-.ui-btn-icon-bottom:after {
-    margin-left: -15px;
-}
-
-/* list view overrides */
-.ui-listview .ui-li-icon {
-    top: .7em;
-}
-
-/* Tour List */
-.tour-list h1 {
-    margin-bottom: 0;
-}
-
-.tour-list p {
-    margin: 0;
-    padding: 5px 0 20px;
-}
-
-.tour-wrapper {
-    position: relative;
-    overflow: hidden;
-}
-.tour-image img {
-    width: 100%;
-    vertical-align: bottom;
-}
-
-div.tour-title {
-    background: rgb(81,120,145);
-    color: #FFF;
-    font-weight: 400;
-    padding: 0;
-    text-align: center;
-    white-space: normal;
-    width: 100%;
-}
-
-.tour-title span {
-    display: block;
-    padding: 10px;
-}
-
-.tour-info {
-    background: #e2ddcc !important;
-    border: none !important;
-}
-
-/* Tour Details */
-#tour-details #header-wrapper img {
-    display: block;
-    width: 100%;
-}
+#gallery li a img {
+  display: block;
+  height: auto;
+  width: 100%; }
 
 /* Keypad */
 .keypad-button,
 .action-button {
-    border: 1px solid rgb(81,120,145);
-    -moz-border-radius: 75px;
-    -webkit-border-radius: 75px;
-    border-radius: 75px;
-    cursor: pointer;
-    font-size: 2.6em;
-    line-height: 1;
-    margin: .285em auto;
-    max-width: 42px;
-    padding: .36em .38em .4em;
-}
+  border: 1px solid #517891;
+  -moz-border-radius: 75px;
+  -webkit-border-radius: 75px;
+  border-radius: 75px;
+  cursor: pointer;
+  font-size: 2.6em;
+  line-height: 1;
+  margin: .285em auto;
+  padding: 0.36em 0.38em 0.4em;
+  width: 75px;
+  height: 75px; }
 
 .clear-button {
-    background: url(../images/delete_key.svg) 7px center no-repeat;
-    background-size: 75%;
-    height: 74px;
-    max-width: inherit;
-    padding: 0;
-    width: 74px;
-}
+  background: url(../images/delete_key.svg) 7px center no-repeat;
+  background-size: 75%;
+  max-width: inherit;
+  padding: 0; }
 
 .go-button {
-    background: #cfe5b5;
-    font-size: 1.9em;
-    margin-top: .385em;
-    padding: .725em .6em .725em .5em;
-    text-transform: uppercase;
-}
+  background: #cfe5b5;
+  font-size: 1.9em;
+  margin-top: .39em;
+  padding: 0.725em 0.6em 0.725em 0.5em;
+  text-transform: uppercase; }
 
 #code-label {
-    font-size: 3.5em;
-    line-height: 1;
-    margin: .1em;
-    padding: .24em;
-    text-align: center;
-}
+  font-size: 3.5em;
+  line-height: 1;
+  margin: .1em;
+  padding: .24em;
+  text-align: center; }
 
 #code-label-wrapper {
-    padding: 0 6px 5px 5px;
-    width: 100%;
-}
+  padding: 0 6px 5px 5px;
+  width: 100%; }
 
 #code-label-border {
-    background-color: none;
-    height: 80px;
-    margin-top: .3em;
-}
-
-/* Stop List View */
-#tour-stop-list .distance {
-    float: right;
-    font-size: 0.8em;
-    margin-right: 1em;
-    padding: 0.3em;
-}
-
-#tour-stop-list .nearest .distance {
-    background-color: #7FBCE5;
-}
-
-#tour-stop-list #header-wrapper img {
-    margin: -5% -5% 0;
-    width: 110%;
-}
-
-.stop-code {
-    border-right: 1px solid #7094aa;
-    font-size: 2em;
-    line-height: 1;
-    margin: 10px 0;
-    position: absolute;
-    text-align: center;
-    top: 1px;
-    width: 56px;
-}
-
-.title-with-code {
-    padding-left: 66px;
-    line-height: 1;
-}
-
-.ui-btn-icon-right:after {
-    display: none;
-}
-
-/* Filter Form */
-.ui-filterable {
-    margin-bottom: 1em;
-}
-
-.ui-filterable .ui-input-search {
-    border-radius: 0;
-    border: 1px solid #7094aa;
-    box-shadow: none;
-}
+  background-color: none;
+  height: 80px;
+  margin-top: .3em; }
 
 /* Map View */
 #content-wrapper.tour-map {
-    padding: 0;
-}
+  padding: 0; }
 
 #tour-map {
-    height: 100%;
-    width: 100%;
-}
+  height: 100%;
+  width: 100%; }
 
 .leaflet-top, .leaflet-bottom {
-    z-index: 999 !important;
-}
+  z-index: 999 !important; }
 
 .marker-bubble-content .stop-options {
-    margin-top: 5px;
-    text-align: center;
-}
+  margin-top: 5px;
+  text-align: center; }
 
 .leaflet-popup-content-wrapper {
-    -webkit-border-radius: 0;
-    border-radius: 0;
-}
+  -webkit-border-radius: 0;
+  border-radius: 0; }
 
 .leaflet-popup-content {
-    margin: 10px;
-}
+  margin: 10px; }
 
 .leaflet-popup-content .title a {
-    font-size: 1em;
-    font-weight: 700;
-    text-decoration: none;
-}
+  font-size: 1em;
+  font-weight: 700;
+  text-decoration: none; }
 
 .leaflet-popup-content .distance {
-    font-size: 80%;
-}
+  font-size: 80%; }
 
 .leaflet-popup-content .goto-stop {
-    float: right;
-    font-size: 2em;
-    margin: 0 0 0 5px;
-}
+  float: right;
+  font-size: 2em;
+  margin: 0 0 0 5px; }
+
 .leaflet-popup {
-    margin-bottom: 20px;
-}
-
-/* Tour Stops */
-.tour-stop .title {
-    font-size: 120%;
-    margin: 0 0 20px 10px;
-}
-
-.tour-stop .description {
-    margin: 10px;
-}
-
-#tour-zooming,
-.tour-zooming {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-}
-#tour-zooming.zoomingImageDescription {
-    background-color: #aaa;
-    bottom: 0;
-    color: white;
-    height: 25px;
-    left: 0;
-    padding: 5px;
-    position: absolute;
-}
-
-/* Stop Group */
-.ui-content.stop-group {
-    padding: 0;
-}
-
-#stop-group #header-wrapper img {
-    display: block;
-    height: auto;
-    width: 110%;
-    margin: -5% -5% 0;
-}
-
-#stop-group h3.stop-title {
-    margin: 15px 20px 0 20px;
-}
-
-#stop-group .description {
-    margin: 20px;
-}
-
-#stop-group #stop-list {
-    margin: 20px;
-}
+  margin-bottom: 20px; }
 
 /* Media Player */
 .player {
-    max-width: 100%;
-}
+  max-width: 100%; }
+
 .mejs-overlay-play,
 .mejs-poster {
-    height: 100%;
-    width: 100%;
-}
-/* Audio Stops */
+  height: 100%;
+  width: 100%; }
 
-#audio-stop .poster-image {
-    width: 100%;
-}
+/* popup */
+#popup-view p {
+  text-align: center; }
 
-/* Video Stops */
-#video-stop .player {
-    max-width: 100%;
-}
-
-/* Image Stop */
-#gallery {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-#gallery li {
-    float: left;
-    width: 33.33333333%;
-}
-
-#gallery li a {
-    border: 1px solid #3c3c3c;
-    display: block;
-    margin: 5px;
-}
-
-#gallery li a img {
-    display: block;
-    height: auto;
-    width: 100%;
-}
-/* Web stop */
-#web-stop img {
-    height: auto;
-    padding: 10px 0;
-    width: 100%;
-}
-a.next-button {
-    clear: both;
-}
-
-/* Audio Slideshow Stop */
-.slideshow-images {
-    height: 300px;
-    overflow: hidden;
-    position: relative;
-    width: 100%;
-}
-
-.slideshow-images img {
-    -webkit-transition: opacity 1s ease-in-out;
-    -moz-transition: opacity 1s ease-in-out;
-    -o-transition: opacity 1s ease-in-out;
-    transition: opacity 1s ease-in-out;
-    opacity:0;
-    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-    filter: alpha(opacity=0);
-    display: block;
-    left:0;
-    max-height: 300px;
-    position:absolute;
-}
-
-.slideshow-images img.opaque {
-    opacity:1;
-    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-    filter: alpha(opacity=1);
-}
+/* social popup */
+.share-button {
+  margin-bottom: 10px; }
 
 /* Quiz Stop */
 .quiz-result {
-    display: none;
-}
+  display: none; }
+
+/* Stop Group */
+#stop-group #header-wrapper img {
+  display: block;
+  height: auto;
+  width: 110%;
+  margin: 0 -5%; }
+
+#stop-group .stop-title {
+  margin: 15px 20px 0 20px; }
+
+#stop-group .description {
+  margin: 20px; }
+
+#stop-group #stop-list {
+  margin: 20px; }
+
+.tour-stop-list .ui-listview .ui-btn {
+  background: #517891 !important;
+  font-weight: 400;
+  color: #fff !important;
+  border: none !important;
+  margin: 0 1em 1em !important;
+  padding: 1em 1em 1em 0; }
+
+.tour-stop-list .ui-listview .ui-btn:hover {
+  background: #5d89a6 !important; }
+
+#tour-stop-list .distance {
+  float: right;
+  font-size: 0.8em;
+  margin-right: 1em;
+  padding: 0.3em; }
+
+#tour-stop-list .nearest .distance {
+  background-color: #7FBCE5; }
+
+#tour-stop-list #header-wrapper img {
+  margin: 0 -5% 0;
+  width: 110%; }
+
+.stop-code {
+  border-right: 1px solid #7094aa;
+  font-size: 2em;
+  line-height: 1;
+  margin: 10px 0;
+  position: absolute;
+  text-align: center;
+  top: 1px;
+  width: 56px; }
+
+.title-with-code {
+  padding-left: 66px;
+  line-height: 1; }
+
+.ui-btn-icon-right:after {
+  display: none; }
+
+/* Tour Details */
+#tour-details #header-wrapper img {
+  display: block;
+  width: 100%; }
+
+.tour-list h1 {
+  margin-bottom: 0; }
+
+.tour-list p {
+  margin: 0;
+  padding: 5px 0 20px; }
+
+.tour-wrapper {
+  position: relative;
+  overflow: hidden; }
+
+.tour-image img {
+  width: 100%;
+  vertical-align: bottom; }
+
+.tour-title {
+  background: #517891;
+  color: #FFF;
+  font-weight: 400;
+  padding: 0;
+  text-align: center;
+  white-space: normal;
+  width: 100%; }
+
+.tour-title span {
+  display: block;
+  padding: 10px; }
+
+.tour-info {
+  background: #e2ddcc !important;
+  border: none !important; }
+
+/* Tour Stops */
+.tour-stop .title {
+  font-size: 120%;
+  margin: 0 0 20px 10px; }
+
+.tour-stop .description {
+  margin: 10px; }
+
+#tour-zooming,
+.tour-zooming {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  width: 100%; }
+
+#tour-zooming.zoomingImageDescription {
+  background-color: #aaa;
+  bottom: 0;
+  color: white;
+  height: 25px;
+  left: 0;
+  padding: 5px;
+  position: absolute; }
+
+/* Video Stops */
+#video-stop .player {
+  max-width: 100%; }
+
+/* Web stop */
+#web-stop img {
+  height: auto;
+  padding: 10px 0;
+  width: 100%; }
+
+a.next-button {
+  clear: both; }
 
 /* Zoom Stop */
 .zoomingImageDescriptionHandle, .zoomingImageDescriptionText {
-    background: rgba(0,0,0,.5);
-    bottom: 0px;
-    color: #FFF;
-    font-size: 12px;
-    padding: 5px 5px 25px 5px;
-    position: absolute;
-    text-align: left;
-    width: 100%;
-}
+  background: rgba(0, 0, 0, 0.5);
+  bottom: 0px;
+  color: #FFF;
+  font-size: 12px;
+  padding: 5px 5px 25px 5px;
+  position: absolute;
+  text-align: left;
+  width: 100%; }
+
+/*# sourceMappingURL=main.css.map */
