--- a/templates/keypad.tpl.html
+++ b/templates/keypad.tpl.html
@@ -1,7 +1,7 @@
-<fieldset class="ui-grid-b">
-    <div id="code-label-wrapper" class="ui-block-a ui-block-b ui-block-c">
-        <div id="code-label-border">
-            <div id="code-label"></div>
+<fieldset class="ui-grid-b keypad">
+    <div id="code-label-wrapper" class="code-label-wrapper">
+        <div id="code-label-border" class="code-label-border">
+            <div id="code-label" class="code-label"></div>
         </div>
     </div>
     <div class="ui-block-a">
@@ -31,7 +31,7 @@
     <div class="ui-block-c">
         <div data-role="button" data-theme="a" class="keypad-button">9</div>
     </div>
-    <div class="ui-block-a" id="clear-button-wrapper">
+    <div class="ui-block-a clear-button-wrapper" id="clear-button-wrapper">
         <div id="clear-button" data-role="button" data-theme="b" class="action-button clear-button"></div>
     </div>
     <div class="ui-block-b">
