--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -22,6 +22,7 @@
 @import "modules/_audio-slideshow-stop";
 @import "modules/_audio-stop";
 @import "modules/_back-button";
+@import "modules/_collapsible";
 @import "modules/_filter-form";
 @import "modules/_footer";
 @import "modules/_header";
