--- a/templates/video.tpl.html
+++ b/templates/video.tpl.html
@@ -1,10 +1,13 @@
 <h3 class="stop-title"><%= title %></h3>
-<video id="video-player" class="player" controls="controls" autoplay="autoplay" poster="<%= imagePath %>">
+<hr />
+<div class="videocontent">
+<video id="video-player" class="player" controls="controls" autoplay="autoplay" poster="<%= imagePath %>" style="width:100%; height:100%;" width="100%" height="100%">
 	<p>Your browser does not support the HTML5 video</p>
 	<% _.each(sources, function(source) { %>
 	<%= source %>
 	<% }); %>
 </video>
+</div>
 <% if (!_.isEmpty(description)) { %>
 <div id="description" data-role="collapsible" data-content-theme="c">
 	<h3>Description</h3>
