--- a/templates/audioSlideshow.tpl.html
+++ b/templates/audioSlideshow.tpl.html
@@ -1,4 +1,5 @@
 <h3 class="stop-title"><%= title %></h3>
+<hr />
 <audio id="audio-player" class="player" controls="controls">
     <p>Your browser does not support HTML 5 audio.</p>
     <% _.each(sources, function(source) { %>
@@ -16,13 +17,13 @@
 </div>
 <% } %>
 <% if (!_.isEmpty(description)) { %>
-<div class="description" data-role="collapsible" data-content-theme="c">
+<div class="description" data-role="collapsible">
     <h3>Description</h3>
     <%= description %>
 </div>
 <% } %>
 <% if (!_.isEmpty(transcription)) { %>
-<div id="transcription" data-role="collapsible" data-content-theme="c">
+<div id="transcription" data-role="collapsible">
     <h3>Transcript</h3>
     <p><%= transcription %></p>
 </div>
