Add responsive css for videos.

--- a/css/scss/modules/_video-stop.scss
+++ b/css/scss/modules/_video-stop.scss
@@ -1,4 +1,6 @@
 /* Video Stops */
-#video-stop .player {
-    max-width: 100%;
+.videocontent {
+    width:90%;
+    max-width: 640px;
+    margin: 0 auto;
 }
