--- a/css/scss/base/_settings.scss
+++ b/css/scss/base/_settings.scss
@@ -6,6 +6,7 @@
 // ====================================================================
 
 @import url(http://fonts.googleapis.com/css?family=Merriweather:400,700,400italic|Open+Sans);
+@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css);
 
 // Fonts
 $primary-font: 'Merriweather', 'Georgia', serif;
