--- a/css/scss/base/_layout.scss
+++ b/css/scss/base/_layout.scss
@@ -18,15 +18,16 @@
     padding-bottom: 49px;
 }*/
 .ui-content {
-    padding: 0 1em 1em;
-}
-
-#content-wrapper h3.stop-title {
-    margin-top: 0;
-    width: 100%;
+    padding: 0 0 1em;
 }
 
 /* list view overrides */
-.ui-listview .ui-li-icon {
-    top: .7em;
+.ui-listview,
+.ui-collapsible,
+.ui-filterable {
+    padding: 0 1em;
+
+    .ui-li-icon {
+        top: .7em;
+    }
 }
