--- a/templates/audio.tpl.html
+++ b/templates/audio.tpl.html
@@ -1,22 +1,22 @@
 <h3 class="stop-title"><%= title %></h3>
 <hr />
+<% if (!_.isEmpty(imagePath)) { %>
+	<img class="poster-image" src="<%= imagePath %>" />
+<% } %>
 <audio id="audio-player" class="player" controls="controls">
 	<p>Your browser does not support HTML 5 audio.</p>
 	<% _.each(sources, function(source) { %>
 	<%= source %>
 	<% }); %>
 </audio>
-<% if (!_.isEmpty(imagePath)) { %>
-	<img class="poster-image" src="<%= imagePath %>" />
-<% } %>
 <% if (!_.isEmpty(description)) { %>
-<div class="description" data-role="collapsible" data-content-theme="c">
+<div class="description" data-role="collapsible" data-content-theme="c" data-iconpos="right" data-collapsed-icon="arrow-down" data-expanded-icon="arrow-up">
 	<h3>Description</h3>
 	<%= description %>
 </div>
 <% } %>
 <% if (!_.isEmpty(transcription)) { %>
-<div id="transcription" data-role="collapsible" data-content-theme="c">
+<div id="transcription" data-role="collapsible" data-content-theme="c" data-iconpos="right" data-collapsed-icon="arrow-down" data-expanded-icon="arrow-up">
 	<h3>Transcript</h3>
 	<p><%= transcription %></p>
 </div>
