Add content wrapper to tour details template.

--- a/templates/tour-details.tpl.html
+++ b/templates/tour-details.tpl.html
@@ -3,6 +3,8 @@
     <img src="<%= header %>" />
 </div>
 <% } %>
-<h3 class="tour-title"><%= title %></h3>
-<p><%= description %></p>
-<a href="<%= defaultStopSelectionView %>" id="start-tour" data-role="button" data-theme="b">Start Tour</a>
+<div class="content-wrapper">
+    <h3 class="tour-title"><%= title %></h3>
+    <p><%= description %></p>
+    <a href="<%= defaultStopSelectionView %>" id="start-tour" data-role="button" data-corners="false" data-shadow="false">Start Tour</a>
+</div>
