--- a/css/scss/modules/_media-player.scss
+++ b/css/scss/modules/_media-player.scss
@@ -7,3 +7,26 @@
     height: 100%;
     width: 100%;
 }
+
+.mejs-container .mejs-controls {
+    background: $audio-player !important;
+
+    .mejs-time-total{
+        background: $audio-bar-total !important;
+    }
+
+    .mejs-time-loaded{
+        background: $audio-bar-loaded !important;
+    }
+
+    .mejs-time-current{
+        background: $audio-bar-current !important;
+    }
+
+    button {
+
+        &:hover{
+            background-color: transparent !important;
+        }
+    }
+}
