Add padding to content wrapper

--- a/css/scss/base/_layout.scss
+++ b/css/scss/base/_layout.scss
@@ -21,6 +21,10 @@
     padding: 0 0 1em;
 }
 
+.content-wrapper {
+    padding: 0 1em 0;
+}
+
 /* list view overrides */
 .ui-listview,
 .ui-collapsible,
